src/net/URL.c
/* Generated by re2c 0.13.5 on Wed May  1 14:06:30 2013 */
#line 1 "./src/net/URL.re"
/*
 * Copyright (C) Tildeslash Ltd. All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License version 3.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */


#include "Config.h"

#include <stdio.h>
#include <stdarg.h>
#include <string.h>
#include <stdlib.h>
#include <limits.h>

#include "URL.h"


/**
 * Implementation of the URL interface. The scanner handle 
 * ISO Latin 1 or UTF-8 encoded url's transparently. 
 *
 * @file
 */


/* ----------------------------------------------------------- Definitions */

typedef struct param_t {
        char *name;
        char *value;
        struct param_t *next;
} *param_t;

#define T URL_T
struct URL_S {
	int port;
       	char *ref;
	char *path;
	char *host;
	char *user;
        char *qptr;
	char *query;
	char *portStr;
	char *protocol;
	char *password;
	char *toString;
        param_t params;
        char **paramNames;
	uchar_t *data;
	uchar_t *buffer;
	uchar_t *marker, *ctx, *limit, *token;
        /* Keep the above align with zild URL_T */
};

/* Unsafe URL characters: [00-1F, 7F-FF] <>\"#%{}|\\^[] ` */
static const uchar_t urlunsafe[256] = {
	1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 
	1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 
	1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 
	1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 
	1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 
	1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 
	1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 
	1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 
	1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 
	1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 
	1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 
	1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1
};

#define UNKNOWN_PORT -1
#define YYCTYPE       uchar_t
#define YYCURSOR      U->buffer  
#define YYLIMIT       U->limit  
#define YYMARKER      U->marker
#define YYCTXMARKER   U->ctx
#define YYFILL(n)     ((void)0)
#define YYTOKEN       U->token
#define SET_PROTOCOL(PORT) *(YYCURSOR-3)=0; U->protocol=U->token; U->port=PORT; goto authority


/* ------------------------------------------------------- Private methods */


static int parseURL(T U) {
        param_t param = NULL;
	#line 112 "./src/net/URL.re"

proto:
	if (YYCURSOR >= YYLIMIT)
		return false;
	YYTOKEN = YYCURSOR;
	
#line 111 "<stdout>"
{
	YYCTYPE yych;

	if ((YYLIMIT - YYCURSOR) < 13) YYFILL(13);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy2;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'n':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy9;
	case 'c':	goto yy8;
	case 'm':	goto yy4;
	case 'o':	goto yy7;
	case 'p':	goto yy6;
	default:	goto yy10;
	}
yy2:
	++YYCURSOR;
#line 119 "./src/net/URL.re"
	{
                        goto proto;
		   }
#line 192 "<stdout>"
yy4:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'z':	goto yy14;
	case 'y':	goto yy49;
	default:	goto yy5;
	}
yy5:
#line 143 "./src/net/URL.re"
	{
                      	goto proto;
                   }
#line 266 "<stdout>"
yy6:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy14;
	case 'o':	goto yy36;
	default:	goto yy5;
	}
yy7:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy14;
	case 'r':	goto yy27;
	default:	goto yy5;
	}
yy8:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy14;
	case 'u':	goto yy18;
	default:	goto yy5;
	}
yy9:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy14;
	default:	goto yy5;
	}
yy10:
	yych = *++YYCURSOR;
	goto yy5;
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy15;
	default:	goto yy12;
	}
yy12:
	YYCURSOR = YYMARKER;
	goto yy5;
yy13:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 3) YYFILL(3);
	yych = *YYCURSOR;
yy14:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy13;
	case ':':	goto yy11;
	default:	goto yy12;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy16;
	default:	goto yy12;
	}
yy16:
	++YYCURSOR;
#line 139 "./src/net/URL.re"
	{
                      	SET_PROTOCOL(UNKNOWN_PORT);
                   }
#line 634 "<stdout>"
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'b':	goto yy19;
	default:	goto yy14;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy20;
	default:	goto yy14;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy21;
	default:	goto yy14;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'd':	goto yy22;
	default:	goto yy14;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy23;
	default:	goto yy14;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy24;
	default:	goto yy12;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy25;
	default:	goto yy12;
	}
yy25:
	++YYCURSOR;
#line 135 "./src/net/URL.re"
	{
                        SET_PROTOCOL(CUBRID_DEFAULT_PORT);
                   }
#line 683 "<stdout>"
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy28;
	default:	goto yy14;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy29;
	default:	goto yy14;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy30;
	default:	goto yy14;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy31;
	default:	goto yy14;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy32;
	default:	goto yy14;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy33;
	default:	goto yy12;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy34;
	default:	goto yy12;
	}
yy34:
	++YYCURSOR;
#line 131 "./src/net/URL.re"
	{
                      	SET_PROTOCOL(ORACLE_DEFAULT_PORT);
                   }
#line 732 "<stdout>"
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy37;
	default:	goto yy14;
	}
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy38;
	default:	goto yy14;
	}
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'g':	goto yy39;
	default:	goto yy14;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy40;
	default:	goto yy14;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy41;
	default:	goto yy14;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy42;
	default:	goto yy14;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'q':	goto yy43;
	default:	goto yy14;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy44;
	default:	goto yy14;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy45;
	default:	goto yy14;
	}
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy46;
	default:	goto yy12;
	}
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy47;
	default:	goto yy12;
	}
yy47:
	++YYCURSOR;
#line 127 "./src/net/URL.re"
	{
                      	SET_PROTOCOL(POSTGRESQL_DEFAULT_PORT);
                   }
#line 805 "<stdout>"
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy50;
	default:	goto yy14;
	}
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'q':	goto yy51;
	default:	goto yy14;
	}
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy52;
	default:	goto yy14;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy53;
	default:	goto yy14;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy54;
	default:	goto yy12;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy55;
	default:	goto yy12;
	}
yy55:
	++YYCURSOR;
#line 123 "./src/net/URL.re"
	{
                      	SET_PROTOCOL(MYSQL_DEFAULT_PORT);
                   }
#line 848 "<stdout>"
}
#line 146 "./src/net/URL.re"
